# sdk-switch

./: .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml
.github/workflows/: dockerhub_publish.yaml  pr_code_check.yaml
config/: .env.template
deployment/: Dockerfile  build.sh
exceptions/: exceptions.py
helper/: active_ssh_client.py  csv_iterator.py  database.py  get_controller_details.py  timestamp_utils.py  utils.py  wf_loader_v2.py
models/config/: acceadian_config.py  database_config.py  dev_tunnel_config.py  nso_config.py  tr_router_credentials.py
models/db_nso/: bea_preprovisioning_entity.py  db_base_entity.py  dom_ordini_bea_entity.py  eng_bh_cables.py  eng_pop_entity.py  eng_profile_table_bea_entity.py  fwa_cables_bh_entity.py  fwa_cables_entity.py  kit_entity.py  pop_exception.py  status_svlan_entity.py  trail_ring_entity.py  v_percorsi_ftth.py
models/db_nso/dto/: eng_bh_cables_dto.py  eng_pop_dto.py  eng_status_svlan_dto.py  extractable_trail_ring.py  router_delivery.py  v_percorsi_ftth_dto.py
models/fork/: dynamic_fork_inputs.py
models/kit_on_wdm/: link_pop_edge_result.py  ring_or_chain.py  trail_chain_result.py  trail_ring_result.py
models/nso/: commercial_identification.py  nso_base_result.py  nso_query_strategy.py
models/performance/: huawei_interface_model.py  zte_interface_model.py
models/router/: router_device.py  router_interfaces.py  router_os_version.py
models/svlan_extraction/: svlan.py  svlan_extraction_output.py
models/wdm/: huawei_service_types.py  wdm_controller_config.py  wdm_device.py  wdm_device_vendor.py  wdm_shelf_slot_port.py
models/wdm/csv_models/: huawei_lag.py  huawei_service_interface.py  huawei_service_interface_vpls.py  neth_interface.py  siae_service.py  siae_uni.py  wdm_discovery_output.py
models/wdm/service_nso/: service_type_nso.py  wdm_interfaces.py
patches/: conductor.py
task_logging/: task_execution_logger.py  task_logger.py
tests/: conftest.py
tests/test_models/db_nso/: test_bea_preprovisioning_entity.py  test_db_base_entity.py
tests/test_models/db_nso/dto/: test_extractable_trail_ring_dto.py
tests/test_models/wdm/: test_siae_service.py  test_siae_uni.py  test_wdm_device.py  test_wdm_shelf_slot_port.py
tests/test_workers/common/: test_common_workers.py  test_map_interface_to_short_name.py
workers/: __init__.py
workers/common/: export_to_local_disk.py  get_timestamp_root_wf.py  map_interface_to_short_name.py
workers/svlan_father_workflow_coordinator/: check_recursively_if_has_failed_task.py  create_fork_inputs_wdm.py  create_svlan_bash_scripts.py  is_kit_on_wdm.py  organize_commands_by_layer.py  prepare_extracted_svlns_for_fork.py
